--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
     "history": "^5.3.0",
+    "multer": "^1.4.5-lts.2",
     "mysql2": "^3.14.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
